--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 
-<title>My github page</title>
+<title> Cricket by Hridit</title>
 
 <style>
 
 .b7 {
 
-background-image: linear-gradient(blue, yellow);
+background-image: linear-gradient(blue, red);
 
 width:400px;
 
@@ -29,9 +29,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(
 
 .s1{
 
-color:white;
+color:red;
 
-}
+
+.s2}
+
+  color:#79b6f7
 
 </style>
 
