--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 .b7 {
 
-background-image: linear-gradient(blue, red);
+background-image: color:#79b6f7
 
 width:400px;
 
@@ -44,14 +44,14 @@ color:red;
 
 <body class="mybackground">
 
-<h1 class="s1" >Hello 7A</h1>
+<h1 class="s1" >Cricket</h1>
 
 
 
 
 <img src="https://assets.publishing.service.gov.uk/media/660ebd1d9f92ac001a516ce8/s300_Cricket.jpeg"; width="200" />
 
-<h1 class="b7">
+
 
 Another heading..
 
