--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title> Cricket by Hridit</title>
+<title> All about cricket</title>
 
 <style>
 
@@ -14,16 +14,6 @@ background-image: color:#79b6f7
 width:400px;
 
 
-
-}
-
-
-
-.mybackground {
-
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
-
-}
 
 
 
@@ -42,7 +32,7 @@ color:red;
 
 </head>
 
-<body class="mybackground">
+
 
 <h1 class="s1" >Cricket</h1>
 
