--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 .b7 {
 
 <body 
-style="background-color:#6db0e3
+style="background-color:#blue
 
 width:400px;
 
@@ -20,7 +20,7 @@ width:400px;
 
 .s1{
 
-color:red;
+color:white;
 
 
 .s2}
