--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
 
 <style>
 
-.b7 {
 
 <body 
-<p style="color:blue;">Red paragraph text</p>
-width:400px;
-
-
-
 
 
 .s1{
@@ -24,7 +18,10 @@ color:white;
 
 .s2}
 
-  color:#79b6f7
+  color:blue   
+
+ <body 
+style="background-color:blue>
 
 
 
@@ -41,18 +38,6 @@ color:white;
 
 
 <img src="https://assets.publishing.service.gov.uk/media/660ebd1d9f92ac001a516ce8/s300_Cricket.jpeg"; width="200" />
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
