--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <style>
 
 
-<body 
+<body  style="background-color:blue">
+
 
 
 .s1{
@@ -19,9 +20,7 @@ color:white;
 .s2}
 
   color:blue   
-
- <body 
-style="background-color:blue>
+ style="background-color:blue">
 
 
 
