--- a/index.html
+++ b/index.html
@@ -1,48 +1,23 @@
-
+<!DOCTYPE html>
 <html>
 
 <head>
+    <title>All about Cricket</title>
+    <style>
+        body {
+            background-color: blue;
+        }
 
-<title> All about cricket</title>
-
-<body style="background-color:blue">
-  
-  
-  <style>
-
-
-
-
-
-
-.s1{
-
-color:white;
-
-
-.s2}
-
-  color:blue   
- style="background-color:blue">
-
-
-
-</style>
-
-
+        .s1 {
+            color: white;
+        }
+    </style>
 </head>
 
-
-
-<h1 class="s1" >Cricket</h1>
-
-
-
-
-<img src="https://assets.publishing.service.gov.uk/media/660ebd1d9f92ac001a516ce8/s300_Cricket.jpeg"; width="200" />
-
-
-
+<body>
+    <h1 class="s1">Cricket</h1>
+    <img src="https://assets.publishing.service.gov.uk/media/660ebd1d9f92ac001a516ce8/s300_Cricket.jpeg" width="200" alt="Cricket Image"/>
 </body>
 
 </html>
+
