--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>All about Cricket</title>
     <style>
         body {
-            background-color: blue;
+            background-color: #66b9e3;
         }
 
         .s1 {
@@ -20,4 +20,3 @@
 </body>
 
 </html>
-
