--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <h1 class="s1">Cricket</h1>
-    <img src="https://assets.publishing.service.gov.uk/media/660ebd1d9f92ac001a516ce8/s300_Cricket.jpeg" width="200" alt="Cricket Image"/>
+    <img src="https://assets.publishing.service.gov.uk/media/660ebd1d9f92ac001a516ce8/s300_Cricket.jpeg" width="200" alt="Cricket Image" width="200"/>
 </body>
 
 </html>
