--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <h1 class="s1">Cricket</h1>
-    <img src="https://assets.publishing.service.gov.uk/media/660ebd1d9f92ac001a516ce8/s300_Cricket.jpeg" width="200" alt="Cricket Image" width="200"/>
+    <img src=https://images.rawpixel.com/image_png_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvam9iNjgwLTE4LXAtbDFkYnQ1c20ucG5n.png="200" alt="Cricket Image" width="200"/>
 </body>
 
 </html>
