--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <img src="https://pngimg.com/d/cricket_PNG101.png" = "200" alt="Cricket Image" width="200"/>
+  <img src="https://media.istockphoto.com/id/177427917/photo/close-up-of-red-cricket-ball-and-bat-sitting-on-grass.jpg?s=612x612&w=0&k=20&c=DcorerbBUeDNTfld3OclgHxCty4jih2yDCzipffX6zw=" = "400" alt="Cricket Image" width="200"/>
 <head>
     <title>All about Cricket</title>
     <style>
