--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>All about Cricket</title>
     <style>
-        body {
+        body {s1
             background-color: #66b9e3;
         }
 
