--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             background-color: #66b9e3;
         }
 
-        
+        <h1> Cricket </h1>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
 While the precise origins of cricket remain uncertain, it is believed that the sport may have been played as early as the 13th century. The first documented cricket match occurred in 1646 in Kent, England. The laws governing the sport were established in 1744, and the world’s first cricket club was formed in 1760. In contemporary play, cricket has implemented an advanced system known as the third umpire, which serves to enhance the accuracy of game-related decisions.</h3>
 
-  
+  <h1> Cricket </h1>
   
 
 
