--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>All about Cricket</title>
+    <title>The World of Cricket</title>
     <style>
         body {
-            background-color: #66b9e3;
-        }
-        h1 {
+            background-color: #f5f5f5;
             color: #333;
+            font-family: 'Times New Roman', Goergia;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #ff0000;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        img {
+            display: block;
+            margin: 20px auto;
+            border: 5px solid #ddd;
+        }
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         h3.s1 {
-            color: #555;
+            color: #333;
+            font-size: 1.1em;
         }
     </style>
 </head>
 <body>
-    <h1>Cricket</h1>
-    <img src="https://media.istockphoto.com/id/177427917/photo/close-up-of-red-cricket-ball-and-bat-sitting-on-grass.jpg?s=612x612&w=0&k=20&c=DcorerbBUeDNTfld3OclgHxCty4jih2yDCzipffX6zw=" height="400" alt="Cricket Image" width="400"/>
+    <header>
+        <h1>The Fascinating World of Cricket</h1>
+    </header>
 
-    <h3 class="s1">Cricket is a sport with a historical background that traces back to late 16th century England. It was officially recognized as a sporting activity in the 18th century and has since expanded its influence globally throughout the 19th and 20th centuries. International matches have been conducted since the 19th century, with formal Test cricket matches commencing in 1877. Presently, cricket ranks as the second most popular spectator sport in the world, following football (soccer).
+    <div class="content">
+        <img src="https://media.istockphoto.com/id/177427917/photo/close-up-of-red-cricket-ball-and-bat-sitting-on-grass.jpg?s=612x612&w=0&k=20&c=DcorerbBUeDNTfld3OclgHxCty4jih2yDCzipffX6zw=" height="400" alt="Cricket Image" width="600"/>
 
-    While the precise origins of cricket remain uncertain, it is believed that the sport may have been played as early as the 13th century. The first documented cricket match occurred in 1646 in Kent, England. The laws governing the sport were established in 1744, and the world’s first cricket club was formed in 1760. In contemporary play, cricket has implemented an advanced system known as the third umpire, which serves to enhance the accuracy of game-related decisions.</h3>
+        <h3 class="s1">Cricket is a sport with a historical background that traces back to late 16th century England. It was officially recognized as a sporting activity in the 18th century and has since expanded its influence globally throughout the 19th and 20th centuries. International matches have been conducted since the 19th century, with formal Test cricket matches commencing in 1877. Presently, cricket ranks as the second most popular spectator sport in the world, following football (soccer).
+
+        While the precise origins of cricket remain uncertain, it is believed that the sport may have been played as early as the 13th century. The first documented cricket match occurred in 1646 in Kent, England. The laws governing the sport were established in 1744, and the world’s first cricket club was formed in 1760. In contemporary play, cricket has implemented an advanced system known as the third umpire, which serves to enhance the accuracy of game-related decisions.</h3>
+    </div>
 </body>
 </html>
+
