--- a/index.html
+++ b/index.html
@@ -1,56 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The World of Cricket</title>
     <style>
         body {
             background-color: #f5f5f5;
             color: #333;
-            font-family: 'Times New Roman', Goergia;
+            font-family: 'Times New Roman', Georgia, serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
+
         header {
             background-color: #ff0000;
             color: #fff;
-            padding: 20px 0;
+            padding: 20px;
             text-align: center;
             margin-bottom: 20px;
         }
-        img {
-            display: block;
-            margin: 20px auto;
-            border: 5px solid #ddd;
+
+        header h1 {
+            font-size: 2.5rem;
+            margin: 0;
         }
+
         .content {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 0 auto;
             padding: 20px;
             background: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
         }
-        h3.s1 {
+
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        h3 {
+            font-size: 1.2rem;
             color: #333;
-            font-size: 1.1em;
+            margin-bottom: 20px;
+        }
+
+        h3.s1 {
+            font-size: 1.1rem;
+            color: #666;
+        }
+
+        p {
+            font-size: 1rem;
+            color: #555;
+            line-height: 1.8;
+        }
+
+        a {
+            color: #007aff;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #005bb5;
+        }
+
+        .footer {
+            background-color: #222;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2rem;
+            }
+
+            .content {
+                padding: 15px;
+            }
+
+            h3 {
+                font-size: 1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.8rem;
+            }
+
+            h3 {
+                font-size: 0.9rem;
+            }
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>The World of Cricket</h1>
+        <h1>The Fascinating World of Cricket</h1>
     </header>
 
     <div class="content">
-        <img src="https://media.istockphoto.com/id/177427917/photo/close-up-of-red-cricket-ball-and-bat-sitting-on-grass.jpg?s=612x612&w=0&k=20&c=DcorerbBUeDNTfld3OclgHxCty4jih2yDCzipffX6zw=" height="400" alt="Cricket Image" width="600"/>
+        <img src="https://media.istockphoto.com/id/177427917/photo/close-up-of-red-cricket-ball-and-bat-sitting-on-grass.jpg?s=612x612&w=0&k=20&c=DcorerbBUeDNTfld3OclgHxCty4jih2yDCzipffX6zw=" alt="Cricket Image">
 
-        <h3 class="s1">Cricket is a sport with a historical background that traces back to late 16th century England. It was officially recognized as a sporting activity in the 18th century and has since expanded its influence globally throughout the 19th and 20th centuries. International matches have been conducted since the 19th century, with formal Test cricket matches commencing in 1877. Presently, cricket ranks as the second most popular spectator sport in the world, following football (soccer).
+        <h3 class="s1">
+            Cricket is a sport with a historical background that traces back to late 16th century England. It was officially recognized as a sporting activity in the 18th century and has since expanded its influence globally throughout the 19th and 20th centuries. International matches have been conducted since the 19th century, with formal Test cricket matches commencing in 1877. Presently, cricket ranks as the second most popular spectator sport in the world, following football (soccer).
+            <br><br>
+            While the precise origins of cricket remain uncertain, it is believed that the sport may have been played as early as the 13th century. The first documented cricket match occurred in 1646 in Kent, England. The laws governing the sport were established in 1744, and the world’s first cricket club was formed in 1760. In contemporary play, cricket has implemented an advanced system known as the third umpire, which serves to enhance the accuracy of game-related decisions.
+            <br><br>
+            If you want to know more about the history of Cricket, click on <a href="#">History of Cricket</a>.
+        </h3>
+    </div>
 
-        While the precise origins of cricket remain uncertain, it is believed that the sport may have been played as early as the 13th century. The first documented cricket match occurred in 1646 in Kent, England. The laws governing the sport were established in 1744, and the world’s first cricket club was formed in 1760. In contemporary play, cricket has implemented an advanced system known as the third umpire, which serves to enhance the accuracy of game-related decisions.
-     
-<br>If you want to know more about the history of Cricket in the sidebar click History of Cricket</br>        </h3>
+    <div class="footer">
+        <p>&copy; 2025 The World of Cricket. All Rights Reserved.</p>
     </div>
 </body>
 </html>
+
 
 
