--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         header h1 {
-            font-size: 2.5rem;
+            font-size: 4rem; /* Increased font size for the title */
             margin: 0;
         }
 
@@ -92,7 +92,7 @@
         /* Responsive Design */
         @media (max-width: 768px) {
             header h1 {
-                font-size: 2rem;
+                font-size: 3rem; /* Slightly smaller size for tablets */
             }
 
             .content {
@@ -106,7 +106,7 @@
 
         @media (max-width: 480px) {
             header h1 {
-                font-size: 1.8rem;
+                font-size: 2.5rem; /* Slightly smaller size for mobile */
             }
 
             h3 {
@@ -137,6 +137,3 @@
     </div>
 </body>
 </html>
-
-
-
