--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; 2025 The World of Cricket. All Rights Reserved.</p>
+        <p>&copy; 2025 The World of Cricket By Hridit Doebhakta. All Rights Reserved.</p>
     </div>
 </body>
 </html>
