--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </head>
 <body>
     <header>
-        <h1>The Fascinating World of Cricket</h1>
+        <h1>The World of Cricket</h1>
     </header>
 
     <div class="content">
