--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             color: #fff;
             text-align: center;
             padding: 10px;
-            position: fixed;
             width: 100%;
-            bottom: 0;
+            position: relative; /* Changed from fixed to relative */
+            margin-top: 20px;
         }
 
         /* Responsive Design */
@@ -117,7 +117,7 @@
 </head>
 <body>
     <header>
-        <h1>The World of Cricket</h1>
+        <h1>The Fascinating World of Cricket</h1>
     </header>
 
     <div class="content">
@@ -132,9 +132,5 @@
         </h3>
     </div>
 
-    <div class="footer">
-        <p>&copy; 2025 The World of Cricket By Hridit Doebhakta. All Rights Reserved.</p>
-    </div>
-</body>
-</html>
+    <div class="
 
