--- a/index.html
+++ b/index.html
@@ -128,16 +128,56 @@
         <img src="https://media.istockphoto.com/id/177427917/photo/close-up-of-red-cricket-ball-and-bat-sitting-on-grass.jpg?s=612x612&w=0&k=20&c=DcorerbBUeDNTfld3OclgHxCty4jih2yDCzipffX6zw=" alt="Cricket Image">
 
         <h3>
-            Cricket is a sport with a historical background that traces back to late 16th century England. It was officially recognized as a sporting activity in the 18th century and has since expanded its influence globally throughout the 19th and 20th centuries. 
+            <strong>The History of Cricket:</strong> Cricket is a sport with a historical background that traces back to late 16th century England. It was officially recognized as a sporting activity in the 18th century and has since expanded its influence globally throughout the 19th and 20th centuries. 
+            <br><br>
+            Initially a pastime enjoyed by rural communities in England, cricket became an organized sport when the first known cricket laws were codified in 1744. By the 19th century, the game had grown immensely in popularity, with county cricket gaining prominence. The establishment of the Marylebone Cricket Club (MCC) at Lord's Cricket Ground cemented cricket's status as an enduring legacy of English culture.
+            <br><br>
+            The sport quickly spread to other parts of the British Empire, including India, Australia, South Africa, and the West Indies, where it evolved and developed passionate followings. Test cricket, which began in 1877, remains one of the most traditional and cherished formats of the game.
+            <br><br>
+            Over time, cricket adapted to modern demands. The introduction of limited-overs cricket in the 1960s gave rise to One Day Internationals (ODIs) and later T20 cricket, which revolutionized the sport with fast-paced action, drawing larger audiences globally. Major tournaments like the ICC Cricket World Cup and T20 World Cup showcase the game's unifying spirit across diverse cultures and nations.
+            <br><br>
+            Cricket continues to inspire millions worldwide, blending tradition with innovation as it evolves into the future.
             <br><br>
             If you want to know more about cricket, explore the following pages:
             <ul>
                 <li><a href="cricket_world_cups.html">Cricket World Cups</a></li>
-                <li><a href="virat_kohli.html">Virat Kohli: From Childhood to T20I Retirement</a></li>
+                <li><a href="#virat-kohli-section">Virat Kohli: From Childhood to T20I Retirement</a></li>
             </ul>
         </h3>
 
         <button class="toggle-button" id="darkModeToggle">Switch to Dark Mode</button>
+    </div>
+
+    <div class="content" id="virat-kohli-section">
+        <h1>Virat Kohli: From Childhood to T20I Retirement</h1>
+        <img src="https://i.pinimg.com/736x/46/6b/ee/466bee8721d70384b99041c0b108339f.jpg" alt="Virat Kohli Image">
+        <p>
+            <div class="content" id="virat-kohli-section">
+    <p>
+        Virat Kohli, born on November 5, 1988, in Delhi, India, is not just a cricketer but a global icon whose name resonates with excellence, discipline, and passion for the sport. His journey began in the bustling streets of Delhi, where he first held a cricket bat at the tender age of three. Encouraged by his father, Prem Kohli, Virat joined the West Delhi Cricket Academy at the age of nine, where his talent quickly caught the attention of coaches. His early years were marked by relentless practice and a determination that belied his age.
+        <br><br>
+        Virat's rise through the ranks was meteoric. He led the Indian U-19 team to victory in the 2008 ICC U-19 Cricket World Cup in Malaysia, an achievement that marked him as a future star. Soon after, he debuted for the Indian national team in August 2008 in an ODI against Sri Lanka. While his initial performances were steady rather than spectacular, Kohli's relentless work ethic and hunger for runs soon became evident. By 2010, he had cemented his place in the Indian team across all formats.
+        <br><br>
+        Kohli's batting style is a blend of classical technique and modern aggression. Known for his cover drives, quick running between the wickets, and ability to chase down daunting targets, he is regarded as one of the finest chasers in cricket history. He holds numerous records, including the fastest player to score 8,000, 9,000, 10,000, and 12,000 ODI runs. His consistency in both ODIs and Test cricket is unparalleled, with an average above 50 in both formats—a testament to his adaptability and skill.
+        <br><br>
+        As a captain, Kohli brought an aggressive and fearless approach to the Indian team. He took over the Test captaincy from MS Dhoni in 2014 and transformed India into a dominant force in world cricket. Under his leadership, India reached the top of the ICC Test rankings and maintained their position for several years. He also led India to memorable Test series wins, including a historic victory in Australia in 2018-19—the first-ever Test series win by India on Australian soil.
+        <br><br>
+        Kohli's dominance extended to limited-overs cricket as well. In T20Is, he became the fastest player to reach multiple milestones, including the highest number of 50+ scores in the format. Despite his unparalleled success, one title that eluded him as captain was the ICC T20 World Cup trophy, a fact that remains a bittersweet aspect of his illustrious career. Nonetheless, his impact on Indian cricket and the T20 format is undeniable, inspiring a new generation of players to aim higher and play fearlessly.
+        <br><br>
+        Kohli's career has not been without challenges. The untimely demise of his father in 2006 was a defining moment in his life. Remarkably, a young Kohli chose to play a crucial Ranji Trophy match for Delhi the very next day, scoring a vital 90 runs. This incident exemplified his dedication to cricket and his unyielding spirit. Later in his career, Kohli also faced form slumps and criticism, particularly during phases when centuries seemed elusive. However, each time, he silenced his critics with stunning comebacks, proving his mental toughness and determination.
+        <br><br>
+        Off the field, Kohli has been an advocate for fitness and discipline. His transformation into one of the fittest athletes in the world inspired a fitness revolution in Indian cricket. His commitment to a strict diet, rigorous training regime, and healthy lifestyle set new benchmarks for cricketers globally. Beyond cricket, Kohli's philanthropic efforts through the Virat Kohli Foundation focus on supporting underprivileged children and promoting sports in India.
+        <br><br>
+        Kohli's decision to step down as T20I captain in 2021 and retire from the format in 2023 marked the end of an era. While his fans were emotional about the announcement, Kohli emphasized his desire to focus on other formats and prolong his cricketing career. Even after his retirement from T20Is, his influence on the format remains profound, with many considering him the finest T20 batsman of his generation.
+        <br><br>
+        Today, Virat Kohli's legacy is etched in the annals of cricket history. With over 70 international centuries and countless records to his name, he is regarded as one of the greatest cricketers of all time. More than the numbers, it is his attitude, passion, and drive that define his greatness. Whether it is his fiery celebrations, intense focus on the field, or heartfelt interactions with fans, Kohli embodies the spirit of modern cricket.
+        <br><br>
+        As he continues to play in other formats, Kohli remains a source of inspiration for millions around the world. His journey from a young boy in Delhi to a global superstar is a story of hard work, resilience, and an unrelenting pursuit of excellence.
+    </p>
+</div>
+
+            <!-- Long Virat Kohli section here (refer to previous response) -->
+        </p>
     </div>
 
     <footer class="footer">
@@ -147,12 +187,12 @@
     <script>
         const toggleButton = document.getElementById('darkModeToggle');
         const body = document.body;
-        const content = document.querySelector('.content');
-        const textElements = document.querySelectorAll('h3, p, a');
+        const content = document.querySelectorAll('.content');
+        const textElements = document.querySelectorAll('h3, p, a, h1');
 
         toggleButton.addEventListener('click', () => {
             const isDarkMode = body.classList.toggle('dark-mode');
-            content.classList.toggle('dark-mode');
+            content.forEach(section => section.classList.toggle('dark-mode'));
             textElements.forEach(element => element.classList.toggle('dark-mode'));
             toggleButton.textContent = isDarkMode ? 'Switch to Light Mode' : 'Switch to Dark Mode';
         });
