--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <!-- Virat Kohli Section -->
     <div class="content" id="virat-kohli-section">
-        <h1>Virat Kohli: From Childhood to T20I Retirement</h1>
+        <h1>Virat Kohli The BEST Batsmen of this Decade </h1>
         <img src="https://i.pinimg.com/736x/46/6b/ee/466bee8721d70384b99041c0b108339f.jpg" alt="Virat Kohli Image">
         <p>
             Virat Kohli, born on November 5, 1988, in Delhi, India, is not just a cricketer but a global icon whose name resonates with excellence, discipline, and passion for the sport. His journey began in the bustling streets of Delhi, where he first held a cricket bat at the tender age of three. Encouraged by his father, Prem Kohli, Virat joined the West Delhi Cricket Academy at the age of nine, where his talent quickly caught the attention of coaches. His early years were marked by relentless practice and a determination that belied his age.
